Fix top padding on mobile version, so menu will not cover section header, while clicking on links.

--- a/public/css/containers.css
+++ b/public/css/containers.css
@@ -28,7 +28,7 @@ body {
 }
 
 .new-section {
-    padding-top: 40px;
+    padding-top: 60px;
     padding-bottom: 40px;
 }
 
