--- a/public/style.css
+++ b/public/style.css
@@ -144,6 +144,10 @@ nav a:hover {
     #burger-nav {
         display: none;
     }
+
+    .new-section {
+        padding-top: 40px;
+    }
 }
 
 #top-button {
